# omnivm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  integration_test.go
cmd/express-demo/: main.go
cmd/libomnivm/: main.go  main_test.go
cmd/manifest-runner/: main.go
cmd/omnivm/: main.go
cmd/stresstest/: main.go  rust_stress.go
cmd/telephone/: main.go
docs/: boundary-semantics.md  bridge-performance-plan.md  ecosystem-gap-assessment.md  example-suite.md  lane-parity.md  manifest-channel-contract.md  manifest-schema.md  passenger-django-polyscript.md  rust-boundary-generics.md  rust-compatibility.md  rust-dogfood.md  rust-runtime-design.md
examples/: GsonDemo.java  Hello.java  beautifulsoup-cheerio-go-cache.json  buffer-sharing-manifest.json  controlflow-manifest.json  controlflow-test.json  crossruntime-manifest.json  cursed-concurrency.json  data-pipeline-manifest.json  django-zod-go-crypto.json  edge-resource-job-handles.json  edge-stream-proxy.json  edge-table-validation-bridges.json  express-manifest.json  express-numpy-go-rate-limit.json  express-pandas-go-workers.json  fizzbuzz-polyglot-manifest.json  go-docs-popular-packages.json  go-http-handler-docs.json  hello.js  hello.py  hello.rb  httpx-url-go-retry.json  java-commons-csv-pydantic-go-batching.json  java-docs-popular-packages.json  java-gson-pandas-zod-express.json  java-jackson-reactor-docs.json  java-jsoup-bs4-cheerio.json  java-manifest-function-proxy.json  java-okhttp-httpx-go-retry.json  java-polyglot-manifest.json  javascript-docs-popular-packages.json  javascript-react-jsx-docs.json  jinja2-marked-go-docs.json  kwargs-crossruntime-manifest.json  manifest-test.json  nokogiri-pandas-js-format.json  numpy-pandas-d3-go-channels.json  pastebin-manifest.json  polyglot-pipeline-manifest.json  (+15 more)
pkg/: runtime.go
pkg/arrow/: arrow.go  arrow_test.go  buffer_bridge.go  callbacks.go  cdata_exports.go  cdata_test.go  cdata_types.go  global.go
pkg/cli/: cli.go  cli_test.go  lazy_test.go
pkg/dispatcher/: dispatcher.go  dispatcher_test.go  epoll_linux.go  epoll_other.go
pkg/engine/: engine.go  engine_test.go
pkg/errmsg/: errmsg.go  errmsg_test.go
pkg/golang/: golang.go  golang_test.go
pkg/handles/: table.go  table_test.go
pkg/javascript/: javascript.go  javascript_test.go  v8_bridge.cc  v8_bridge.h
pkg/jvm/: jvm.go  jvm_test.go
pkg/manifest/: async.go  boundary.go  boundary_test.go  bridge.go  bridge_integration_test.go  bridge_test.go  capture_dedup_test.go  captures.go  channels.go  compiled.go  descriptor_keys.go  doctor.go  executor.go  go_proxy.go  guest_stream_batch_contract_test.go  lifecycle_error.go  manifest.go  manifest_test.go  owner_dispatch.go  owner_dispatch_test.go  plugin_cshared.go  plugins.go  plugins_test.go  rust_boundary_generics_contract_test.go  rust_contract_test.go  rust_eval.go  (+10 more)
polyscript/: .differential-baseline.json  .gitignore  CLAUDE.md  Makefile  README.md  Spec.md  jest.config.js  package-lock.json  package.json  repl.js  tsconfig.json
pyomnivm/: sitecustomize.py  test_omnivm.py  test_polyscript.py
runtime/rust/: .gitignore  Cargo.toml
runtime/rust/omnivm/: Cargo.toml
runtime/rust/omnivm/src/: abi.rs  cdata.rs  dyn.rs  envelope.rs  error.rs  export_macros.rs  interop.rs  lib.rs  logging.rs  objects.rs  rt.rs  table.rs
runtime/rust/prelude/: Cargo.toml
runtime/rust/prelude/src/: lib.rs
runtime/rust/units/seed/: Cargo.toml
runtime/rust/units/seed/src/: lib.rs
scripts/: build.sh  javascript_docker.go  jvm_docker.go  python3-polyscript  run-manifest-libomnivm.py  rust-compile-sweep-expectations.txt  rust-compile-sweep.sh  rust-corpus-expectations.txt  rust-registry-sweep-expectations.txt  test-cli.sh  test-libomnivm-manifests.sh  test-libomnivm-stress.py  test-libomnivm-stress.sh  test-manifests.sh  test-poly-libomnivm-smoke.sh  test-prefork-rust.py  test-rust-corpus.sh  test-rust-leaks.sh  v8_bridge_duktape.c  v8_bridge_node.cc
(+310 files in other folders)
