# The prelude workspace baked into the Docker image: the pinned crate set is
# pre-compiled into the shared CARGO_TARGET_DIR so a .poly file using only
# prelude crates compiles user code only. Versions here must stay in sync
# with pinnedCrates in pkg/rust/toolchain.go. Policy: rustls over native-tls
# throughout (no openssl-sys build.rs probing), and features are the union of
# commonly-needed ones — features outside this union trigger a cold rebuild.
[package]
name = "omnivm-prelude"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
omnivm = { package = "omnivm_rs", path = "../omnivm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1"
polars = { version = "0.46", features = ["lazy", "serde", "ipc", "ipc_streaming"] }
anyhow = "1"
thiserror = "2"
itertools = "0.14"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.9"
once_cell = "1"
ndarray = "0.16"
bytes = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
csv = "1"
