# Permanent seed unit: keeps the units/* workspace glob non-empty, and its
# image-time build validates the full unit pipeline (and pre-warms the unit
# link path) before any user code arrives.
[package]
name = "omnivm-unit-seed"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnivm_unit_seed"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
omnivm = { package = "omnivm_rs", path = "../../omnivm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
